# twokernel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.sh
src/: kmain.cpp
src/include/arch/x86-64/system/: gdt.hpp
src/include/boot/: boot.hpp  limine.conf
src/include/drivers/: fbtty.hpp  font_8x16.hpp  framebuffer.hpp  tty.hpp
src/include/interfaces/drivers/: console.hpp
src/include/libc/: stdio.hpp  string.hpp
src/include/limine/: console.hpp  requests.hpp
src/include/std/: array  cstdarg  cstddef  cstdint  string_view
src/include/util/: kernel_logger.hpp  kprint.hpp
src/kernel/: kernel.main.cpp
src/kernel/arch/x86-64/: linker.lds
src/kernel/arch/x86-64/system/: gdt.cpp  gdt.s
src/kernel/boot/: boot.cpp
src/kernel/drivers/: fbtty.cpp  framebuffer.cpp  tty.cpp
src/kernel/interfaces/drivers/: console.cpp
src/kernel/limine/: console.cpp  requests.cpp
src/kernel/util/: kernel_logger.cpp
src/libc/: string.cpp
